--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -6,8 +6,14 @@
 <head th:fragment="headerfiles(title,links)">
     <title th:replace="${title}">Catalog Manager</title>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <base href="/">
     <link th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.css}" rel="stylesheet">
     <link th:href="@{/webjars/font-awesome/5.9.0/css/all.css}" rel="stylesheet">
+    <script th:src="@{/webjars/font-awesome/5.9.0/js/solid.js}"></script>
+    <script th:src="@{/webjars/font-awesome/5.9.0/js/fontawesome.js}"></script>
+
     <!--/* Per-page placeholder for additional links */-->
     <th:block  th:replace="${links}" />
 </head>
@@ -15,7 +21,7 @@
 
 <!-- Fragment #2 : Navbar contains nav links -->
 <div th:fragment="nav">
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar  navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#" th:href="@{/index}">Catalog Manager</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -68,7 +74,9 @@
 
 <!-- Fragment #4 : (not using yet) -->
 <th:block th:fragment="scripts(script)">
-    <script  src="/webjars/jquery/3.0.0/jquery.min.js"></script>
+
+    <script src="/webjars/popper.js/1.14.3/popper.min.js"></script>
+    <script src="/webjars/jquery/3.0.0/jquery.min.js" th:href="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
     <script src="/webjars/bootstrap/4.3.1/js/bootstrap.bundle.js" th:href="@{/webjars/bootstrap/4.3.1/js/bootstrap.bundle.min.js}"></script>
     <script src="/webjars/bootstrap/4.3.1/js/bootstrap.js" th:href="@{/webjars/bootstrap/4.3.1/js/bootstrap.js}"></script>
     <!--/* Per-page placeholder for additional links */-->
